# crypto-regime-trading

./: .gitignore  CHANGELOG.md  LICENSE  README.md  requirements.txt  setup.py
.claude/: settings.local.json
crypto_cluster_pca/backtest_system/: .gitignore  backtest_analysis.ipynb  backtest_data_manager.py  backtest_engine.py  backtest_trading_strategy.py  comprehensive_backtest_analysis.ipynb  expected_value_analyzer.py  run_backtest.py  sharpe_optimized_strategy.py  strategy_comparison.py  test_enhanced_strategy.py
crypto_cluster_pca/data/: clustering_analysis_metadata.json  clustering_analysis_optimal_clusters.csv  clustering_analysis_pca_data.csv  clustering_analysis_pca_scaled.csv  crypto_features.csv  crypto_features_normalized.csv  crypto_prices.csv  cryptocurrency_clusters_summary.csv  feature_engineering_results.csv  historical_regime_classifications.csv  pca_5_components.csv  pca_5_components_clustered.csv  pca_analysis_summary.json  pca_component_interpretations.csv  pca_components_optimal.csv  pca_loadings.csv  pca_loadings_optimal.csv  pca_variance_explained.csv  regime_analysis_summary.csv  regime_characteristics.csv  regime_transitions.csv
crypto_cluster_pca/research/: 01_data_collection.ipynb  02_feature_engineering.ipynb  03_pca_analysis.ipynb  04_clustering_analysis.ipynb  clustering_analysis.ipynb  data_collection.ipynb  feature_engineering.ipynb  pca_analysis.ipynb
crypto_cluster_pca/src/: crypto_regime_analysis.py  regime_scheduler.py
paper_trading/: CMakeLists.txt  build.sh
paper_trading/include/: alpaca_client.h  common.h  data_structures.h  performance_tracker.h  regime_data.h  trading_strategy.h
paper_trading/src/: alpaca_client_impl.cpp  common.cpp  main.cpp  performance_tracker.cpp  regime_data.cpp  trading_strategy.cpp  trading_strategy_ui.cpp
